[package]
name = "channelguard"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.15.0", default-features = false, features = ["macros", "throttle", "rustls", "ctrlc_handler"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1", features = ["rt-multi-thread", "macros"] }
